--- a/views/pizza.html
+++ b/views/pizza.html
@@ -1,324 +1,212 @@
 <!DOCTYPE HTML>
 <html>
-<head>  
+<head>
     <style>
-        /* latin-ext */
-        @font-face
+        /** {
+  outline: 1px solid red !important;
+}*/
+        *
         {
-            font-family: 'Open Sans';
-            font-style: normal;
-            font-weight: 400;
-            src: local('Open Sans'), local('OpenSans'), url(http://fonts.gstatic.com/s/opensans/v10/u-WUoqrET9fUeobQW7jkRVtXRa8TVwTICgirnJhmVJw.woff2) format('woff2');
-            unicode-range: U+0100-024F, U+1E00-1EFF, U+20A0-20AB, U+20AD-20CF, U+2C60-2C7F, U+A720-A7FF;
-        }
-        /* latin */
-        @font-face
-        {
-            font-family: 'Open Sans';
-            font-style: normal;
-            font-weight: 400;
-            src: local('Open Sans'), local('OpenSans'), url(http://fonts.gstatic.com/s/opensans/v10/cJZKeOuBrn4kERxqtaUH3VtXRa8TVwTICgirnJhmVJw.woff2) format('woff2');
-            unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
-        }
-
-        html
-        {
-            font-size: 100%;
-            overflow-y: scroll;
-            -webkit-tap-highlight-color: rgba(0,0,0,0);
-            -ms-text-size-adjust: 100%;
-            -webkit-text-size-adjust: none;
+            -webkit-box-sizing: border-box;
+            -moz-box-sizing: border-box;
+            -box-sizing: border-box;
         }
 
         body
         {
-            margin: 0;
-            font-size: 14px;
-            line-height: 1.61;
-            font-weight: 400;
+            font-family: "Trebuchet MS", Helvetica, sans-serif;
+            background: black;
         }
 
-        body, button, input, select, textarea
+        input
         {
-            font-family: 'Open Sans', sans-serif;
-            color: #333;
+            background: grey;
+            font-size: 18px;
         }
 
-        a
+        form
         {
-            color: #12C;
+            display: inline-block;
         }
 
-            a:visited
-            {
-                color: #61C;
-            }
-
-            a:focus
-            {
-                outline: thin dotted;
-            }
-
-            a:hover, a:active
-            {
-                color: #c00;
-                outline: 0;
-            }
-
-        b, strong
+        .centered
         {
-            font-weight: bold;
+            text-align: center;
         }
 
-        pre, code
+        #pizzaSize
         {
-            font-family: monospace, monospace;
-            font-size: 1em;
+            font-weight: 800;
         }
 
-        ul, ol
+        .mover
         {
-            margin: 1em 0;
-            padding: 0 0 0 20px;
+            position: fixed;
+            width: 256px;
+            z-index: -1;
         }
 
-        img
-        {
-            border: 0;
-            max-width: 100%;
-        }
-
-        body
-        {
-            background: #fff;
-        }
-
-        header, footer, .container
-        {
-            max-width: 45em;
-            margin: 0 auto;
-        }
-
-        header
-        {
-            padding: 0 0.5em;
-            color: #C90B0B;
-        }
-
-            header img
-            {
-                border-radius: 40px;
-                float: left;
-            }
-
-            header p
-            {
-                font-size: 1.5em;
-                font-weight: bold;
-                padding-left: 4em;
-            }
-
-                header p span
-                {
-                    font-size: 0.8em;
-                    font-weight: normal;
-                }
-
-        .hero
-        {
-            padding: 2em;
-            background-color: #f8f8f8;
-            font-size: 1.2em;
-            border-bottom: 1px solid #ccc;
-            border-top: 1px solid #ccc;
-        }
-
-        .content
-        {
-            padding: 1em 1em;
-        }
-
-            .content li
-            {
-                list-style-type: none;
-                font-size: 1.1em;
-            }
-
-        li img
+        .randomPizzaContainer
         {
             float: left;
-            padding-right: 1em;
+            display: flex;
         }
 
-        li p
-        {
-            font-size: 0.9em;
-            font-style: italic;
-        }
-
-        footer
-        {
-            padding: 0 0.5em;
-            border-top: 1px solid #ccc;
-        }
-
-            footer span
+            .randomPizzaContainer:after
             {
-                float: right;
-                font-style: italic;
+                content: "";
+                display: table;
+                clear: both;
             }
 
-        /* Smartphones (portrait) */
-        @media only screen and (max-width: 480px)
+        .container
         {
-            body
-            {
-                font-size: 12px;
-            }
-
-            header p
-            {
-                padding-left: 4.5em;
-            }
+            background-color: rgba(240, 60, 60, 0.8);
         }
     </style>
-
     <link rel="stylesheet" href="css/bootstrap-grid.css">
 </head>
 
 <body>
-  <div class="container">
-    <div id="header" class="row">
-      <div class="col-md-6">
-        <div class="row">
-          <div class="col-md-12">
-            <h1>Cam's Pizzeria</h1>
-            <div class="row">
-              <div id="menu" class="col-md-12">
-                <form action="#randomPizzas">
-                  <input type="submit" value="Menu">
-                </form>
-                <form action="#ingredients">
-                  <input type="submit" value="Our Ingredients">
-                </form>
-                <form action="#locations">
-                  <input type="submit" value="Locations">
-                </form>
-                <form action="#" onsubmit="alert('Thanks for clicking! This button doesn\'t do anything because this is a fake pizzeria :\)')">
-                  <input type="submit" value="Contact Us">
-                </form>
-              </div>
+    <div class="container">
+        <div id="header" class="row">
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h1>Cam's Pizzeria</h1>
+                        <div class="row">
+                            <div id="menu" class="col-md-12">
+                                <form action="#randomPizzas">
+                                    <input type="submit" value="Menu">
+                                </form>
+                                <form action="#ingredients">
+                                    <input type="submit" value="Our Ingredients">
+                                </form>
+                                <form action="#locations">
+                                    <input type="submit" value="Locations">
+                                </form>
+                                <form action="#" onsubmit="alert('Thanks for clicking! This button doesn\'t do anything because this is a fake pizzeria :\)')">
+                                    <input type="submit" value="Contact Us">
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-          </div>
+            <div id="movingPizzas1" class="col-md-6">
+            </div>
         </div>
-      </div>
-      <div id="movingPizzas1" class="col-md-6">
-      </div>
-    </div>
-    <div id="callToAction" class="row">
-      <div class="col-md-4">
-        <img src="images/pizzeria.jpg" class="img-responsive"> <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
-      </div>
-      <div class="col-md-8">
-        <div class="row">
-          <div class="col-md-12">
-            <h2>We Have Hundreds of Pizza Recipes!</h2>            
-            <p>At Cam's Pizzeria, we know you want options. Pepperoni? Boring. Cheese? No way! Sausage? C'mon, let's get creative.</p>
+        <div id="callToAction" class="row">
+            <div class="col-md-4">
+                <img src="images/pizzeria.jpg" class="img-responsive">
+                <!-- Image credit to: http://commons.wikimedia.org/wiki/File:HK_TST_night_%E5%98%89%E8%98%AD%E9%81%93_Granville_Road_restaurant_Paisano's_Pizzeria_pizza_Dec-2013.JPG -->
+            </div>
+            <div class="col-md-8">
+                <div class="row">
+                    <div class="col-md-12">
+                        <h2>We Have Hundreds of Pizza Recipes!</h2>
+                        <p>At Cam's Pizzeria, we know you want options. Pepperoni? Boring. Cheese? No way! Sausage? C'mon, let's get creative.</p>
 
-            <p>We have every pizza ingredient imaginable in our kitchen because we know you take choice seriously. Take a look through our menu of hundreds of pizza options and we know that you'll find something you love.</p>
-          </div>
+                        <p>We have every pizza ingredient imaginable in our kitchen because we know you take choice seriously. Take a look through our menu of hundreds of pizza options and we know that you'll find something you love.</p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6 col-md-push-3">
+                        <form action="#randomPizzas">
+                            <input type="submit" value="Pick a Pizza Now!">
+                        </form>
+                    </div>
+                </div>
+            </div>
         </div>
-        <div class="row">
-          <div class="col-md-6 col-md-push-3">
-            <form action="#randomPizzas">
-              <input type="submit" value="Pick a Pizza Now!">
-            </form>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div id="ingredients" class="row">
-      <div class="col-md-8 col-md-push-2">
-        <div class="row">
-          <div class="col-md-12 centered">
-            <h2>Ingredients!</h2>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12">
-            <p>We've scoured the planet for the best pizza ingredients. Our crack team of ingredient specialists are on constant lookout for new and interesting pizza ingredients.</p>
+        <div id="ingredients" class="row">
+            <div class="col-md-8 col-md-push-2">
+                <div class="row">
+                    <div class="col-md-12 centered">
+                        <h2>Ingredients!</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
+                        <p>We've scoured the planet for the best pizza ingredients. Our crack team of ingredient specialists are on constant lookout for new and interesting pizza ingredients.</p>
 
-            <p>We have classic meats like pepperoni, sausage, and barbecue chicken. But you can find even more fun meats like coppa, kielbasa and soylent green on our menu too.</p>
+                        <p>We have classic meats like pepperoni, sausage, and barbecue chicken. But you can find even more fun meats like coppa, kielbasa and soylent green on our menu too.</p>
 
-            <p>Not interested in meat? No problem! We love our veggies too :) We have everything from arugula to zucchini.</p>
-          </div>
+                        <p>Not interested in meat? No problem! We love our veggies too :) We have everything from arugula to zucchini.</p>
+                    </div>
+                </div>
+            </div>
         </div>
-      </div>
+        <div id="locations" class="row">
+            <div class="col-md-12">
+                <h2 style="text-align: center">Locations!</h2>
+                <div class="row">
+                    <div class="col-md-6">
+                        <h3>Pizza Road</h3>
+                        <p>1800 Pizza Road<br>
+                            San Francisco, CA<br>
+                            01010<br>
+                            555-555-5555</p>
+                    </div>
+                    <div class="col-md-6">
+                        <h3>Classic Pie Way</h3>
+                        <p>999 Classic Pie Way<br>
+                            New York, NY<br>
+                            00100<br>
+                            555-555-5555</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="pizzaGenerator" class="row">
+            <div class="col-md-12">
+                <h2 style="text-align: center">Our Pizzas!</h2>
+                <div class="row">
+                    <div class="col-md-12">
+                        <em>What size pizza would you like? Use the slider below to change pizza sizes.</em>
+                    </div>
+                    <div id="pizzaSize" class="col-md-6">Medium</div>
+                    <div class="col-md-12">
+                        <input id="sizeSlider" type="range" min="1" max="3" value="2" step="1" onchange="resizePizzas(this.value)"></input>
+                    </div>
+                </div>
+                <div id="randomPizzas" class="row">
+                    <div id="pizza0" class="randomPizzaContainer" style="width: 33.33%;">
+                        <div class="col-md-6">
+                            <img src="images/pizza.png" class="img-responsive">
+                        </div>
+                        <div class="col-md-6">
+                            <h4>The Udacity Special</h4>
+                            <ul>
+                                <li>Turkey</li>
+                                <li>Tofu</li>
+                                <li>Cauliflower</li>
+                                <li>Sun Dried Tomatoes</li>
+                                <li>Velveeta Cheese</li>
+                                <li>Red Sauce</li>
+                                <li>Whole Wheat Crust</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div id="pizza1" class="randomPizzaContainer" style="width: 33.33%;">
+                        <div class="col-md-6">
+                            <img src="images/pizza.png" class="img-responsive">
+                        </div>
+                        <div class="col-md-6">
+                            <h4>The Cameron Special</h4>
+                            <ul>
+                                <li>Chicken</li>
+                                <li>Hot Sauce</li>
+                                <li>White Crust</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
     </div>
-    <div id="locations" class="row">
-      <div class="col-md-12">
-        <h2 style="text-align: center">Locations!</h2>
-        <div class="row">
-          <div class="col-md-6">
-            <h3>Pizza Road</h3>
-            <p>1800 Pizza Road<br>San Francisco, CA<br>01010<br>555-555-5555</p>
-          </div>
-          <div class="col-md-6">
-            <h3>Classic Pie Way</h3>
-            <p>999 Classic Pie Way<br>New York, NY<br>00100<br>555-555-5555</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div id="pizzaGenerator" class="row">
-      <div class="col-md-12">
-        <h2 style="text-align: center">Our Pizzas!</h2>
-        <div class="row">
-          <div class="col-md-12">
-            <em>What size pizza would you like? Use the slider below to change pizza sizes.</em>
-          </div>
-          <div id="pizzaSize" class="col-md-6">Medium</div>
-          <div class="col-md-12">
-            <input id="sizeSlider" type="range" min="1" max="3" value="2" step="1" onchange="resizePizzas(this.value)"></input>
-          </div>
-        </div>
-        <div id="randomPizzas" class="row">
-          <div id="pizza0" class="randomPizzaContainer" style="width:33.33%;">
-            <div class="col-md-6">
-              <img src="images/pizza.png" class="img-responsive">
-            </div>
-            <div class="col-md-6">
-              <h4>The Udacity Special</h4>
-              <ul>
-                <li>Turkey</li>
-                <li>Tofu</li>
-                <li>Cauliflower</li>
-                <li>Sun Dried Tomatoes</li>
-                <li>Velveeta Cheese</li>
-                <li>Red Sauce</li>
-                <li>Whole Wheat Crust</li>
-              </ul>
-            </div>
-          </div>
-          <div id="pizza1" class="randomPizzaContainer" style="width:33.33%;">
-            <div class="col-md-6">
-              <img src="images/pizza.png" class="img-responsive">
-            </div>
-            <div class="col-md-6">
-              <h4>The Cameron Special</h4>
-              <ul>
-                <li>Chicken</li>
-                <li>Hot Sauce</li>
-                <li>White Crust</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
-  </div>
-  <script type="text/javascript" src="js/main.js"></script>
+    <script type="text/javascript" src="js/main.js"></script>
 </body>
 
 </html>
